<resources>
    <string name="app_name">GeekNews</string>
    <string name="login">登录</string>
    <string name="info">资讯</string>
    <string name="zhihu">知乎日报</string>
    <string name="wechat">微信精选</string>
    <string name="gank">干货集中营</string>
    <string name="gold">稀土掘金</string>
    <string name="vtex">V2EX</string>
    <string name="choose">选项</string>
    <string name="collect">收藏</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="ribao">日报</string>
    <string name="theme">主题</string>
    <string name="hot">热门</string>
    <string name="sousuo">搜索</string>
</resources>
